<resources>
    <string name="app_name">Secret Sensor Logger</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_log">Log</string>

    <string name="sensor_delay_options">Sensor Delay</string>
    <string name="sensor_type_options">Sensor Type</string>
    <string name="sensor_reporting_options">Sensor Reporting</string>
    <string name="sensor_low_power_mode_options">Low Power Mode</string>

    <string name="sensor_delay_fastest">Fastest</string>
    <string name="sensor_delay_game">Game</string>
    <string name="sensor_delay_ui">UI</string>
    <string name="sensor_delay_normal">Normal</string>

    <string name="sensor_type_base">Base</string>
    <string name="sensor_type_compound">Compound</string>

    <string name="sensor_reporting_mode_onChange">On Change</string>
    <string name="sensor_reporting_mode_continuous">Continuous</string>
    <string name="sensor_reporting_mode_oneShot">Oneshot</string>
    <string name="sensor_reporting_mode_special">Special</string>

    <string name="sensor_log_to_file">Log To File</string>

</resources>