<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sensorDelayOptionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/sensor_delay_options" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/sensorDelayNormalRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/sensor_delay_normal"/>

                    <RadioButton
                        android:id="@+id/sensorDelayUIRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_delay_ui" />

                    <RadioButton
                        android:id="@+id/sensorDelayGameRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_delay_game" />

                    <RadioButton
                        android:id="@+id/sensorDelayFastestRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_delay_fastest" />
                </RadioGroup>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lowPowerModeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/sensor_low_power_mode_options"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/lowPowerModeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lowPowerModeTextView"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sensorTypeOptionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/sensor_type_options" />

                <Switch
                    android:id="@+id/sensorTypeBaseSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_type_base"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/sensorTypeCompoundSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_type_compound"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/sensorReportingOptionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/sensor_reporting_options" />

                <Switch
                    android:id="@+id/sensorReportingModeContinuousSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_reporting_mode_continuous"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/sensorReportingModeOnChangeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_reporting_mode_onChange"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/sensorReportingModeOneshotSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_reporting_mode_oneShot"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/sensorReportingModeSpecialSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/sensor_reporting_mode_special"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>